# Graduation_Project

./: .breakpoints  .replit  LICENSE  app.py  database.py  functions.py  importnumpy.py  pyproject.toml  replit.nix  requirements.txt  try.py
Front-End/: Home.css  Home.html  Home2.css  hand-painted-watercolor-pastel-sky-cloud-background_41066-1949.avif
prompt/: base_prompt.txt
static/: Home.css  Home2.css  Product_Search.css  SHOW_product.css  account.css  account2.css  chatbot.css  chatbot.js  chatbot2.css  code.txt  signup_login.css
templates/: Category_search.html  Favorite.html  Home.html  Product_Search.html  SHOW_product.html  account.html  chatbot.html  chatbot2.html  signup_login.html
