[tool.poetry]
name = "repl-nix-graduationproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_graduationproject"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.30"
pandas = "^2.2.2"
sentence-transformers = "^3.0.1"
torch = "^2.3.1"
faiss-cpu = "^1.8.0"

numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
